--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@vercel/speed-insights": "^1.2.0",
     "dotenv": "^16.4.5",
     "react-router-dom": "^7.7.0",
     "yet-another-react-lightbox": "^3.25.0"
